# esp32s3_handwritten_recognition

./: .gitmodules  CMakeLists.txt  Digit Handwritten Prediction_Final.pptx  README.md  mnist_train.ipynb  sdkconfig
components/esp_lcd_touch_xpt2046/: esp_lcd_touch_xpt2046.c
components/esp_lcd_touch_xpt2046/include/: esp_lcd_touch_xpt2046.h  util.h
main/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  idf_component.yml  lcd_touch_init.c  lcd_touch_init.h  lvgl_component_init.c  lvgl_component_init.h  main.cpp  model_data.h  model_data2.h
main/squareline_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/squareline_ui/components/: ui_comp_hook.c
main/squareline_ui/images/: ui_img_dteti_png.c  ui_img_path1_png.c  ui_img_roller_bg_png.c
main/squareline_ui/screens/: ui_ScreenMain.c  ui_TitleScreen.c
