SET(SOURCES ./squareline_ui/screens/ui_TitleScreen.c
    ./squareline_ui/screens/ui_ScreenMain.c
    ./squareline_ui/ui.c
    ./squareline_ui/components/ui_comp_hook.c
    ./squareline_ui/ui_helpers.c
    ./squareline_ui/images/ui_img_dteti_png.c
    ./squareline_ui/images/ui_img_path1_png.c
    ./squareline_ui/images/ui_img_roller_bg_png.c)

# add_library(ui ${SOURCES})
